# forge-exec

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  prepare.js
.github/disabled_workflows/: release.yml
demo-rust/: .gitignore  Cargo.toml  README.md  example.rs  foundry.toml  remappings.txt
demo-rust/script/: ExecDemo.s.sol
demo-rust/src/: Hello.sol
demo-rust/test/: Exec.t.sol
forge-exec-ipc-client/: .gitignore  Cargo.toml  README.md  package.json
forge-exec-ipc-client/src/: main.rs
src/: Exec.sol
